# dotfiles

./: .gitconfig  .gitignore  .zshrc  AGENTS.md  README.md
.aws/: config
github/: .gitconfig
github/.copilot/: mcp-config.json
mcp/.aws/amazonq/: mcp.json  pyproject.toml  server.py
mcp/.aws/amazonq/cli-agents/: agent_config.json  agent_config.json.example
mcp/.config/mcp/: .gitignore  README.md  pyproject.toml  server.py
nav/: .gitignore  Makefile  README.md  go.mod
nav/.zshrc.d/: nav-completion.zsh  nav.zsh
nav/cmd/nav/: main.go
nav/internal/commands/: commands.go
nav/internal/utils/: utils.go
nvim-bkup/.config/nvim/lua/plugins/: jukit.lua  spectre.lua
nvim/.config/nvim/: init.lua  lazy-lock.json
nvim/.config/nvim/lua/ascii_art/: angeryskull.lua  demond.lua  skull.lua  skullandaxe.lua  skullandbones.lua
nvim/.config/nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
nvim/.config/nvim/lua/plugins/: alpha.lua  catppuccin.lua  commentary.lua  copilot-chat.lua  disable-blink-cmp.lua  disable-bufferline.lua  eslint.lua  harpoon2.lua  jukit.lua  lazygit.lua  mason.lua  mini-move.lua  neo-tree.lua  nvim-cmp.lua  outline.lua  python-formatting.lua  snacks.lua  terraform.lua  todo.lua  typescript-tools.lua
opencode/.config/opencode/: opencode.jsonc
opencode/.config/opencode/instructions/: commit-style.md  pr-style.md
starship/.config/: starship.toml
tmux/: .tmux.conf
wezterm/: .wezterm.lua
zed/: keymap.json
zed/.config/zed/: keymap.json  settings.json
zsh/: .zshrc
zsh/.zshrc.d/: code-nav.zsh  simple-nav.zsh
