[project]
name = "aphexlog-mcp-server"
version = "0.1.0"
description = "General MCP server for Amazon Q integration"
authors = [
    {name = "aphexlog"}
]
dependencies = [
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.scripts]
aphexlog-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
